# researchcrew

./: .env.example  .gitignore  Dockerfile  README.md  STRUCTURE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/researchcrew/: agents.py  cli.py  config.py  crew.py  demo.py  models.py  web.py
src/researchcrew/ui/: index.html
tests/: test_models.py  test_web.py
