[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchcrew"
version = "0.1.0"
description = "Multi-agent deep research system using Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "rich>=13.9.0",
    "typer>=0.13.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
researchcrew = "researchcrew.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
